[project]
name = "competition-bakdabak-action-datamining"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "ipykernel>=7.1.0",
    "kaggle>=1.7.4.5",
    "nbconvert>=7.16.6",
    "python-dotenv>=1.0.0",
    "roboflow>=1.2.11",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchvision==0.15.2",
    "ultralytics>=8.3.221",
]

[tool.uv.sources]
torch = { index = "pytorch-cu116" }
torchaudio = { index = "pytorch-cu116" }
torchvision = { index = "pytorch-cu116" }

[[tool.uv.index]]
name = "pytorch-cu116"
url = "https://download.pytorch.org/whl/cu116"
explicit = true
