[project]
name = "competition-bakdabak-action-datamining"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "ipykernel>=7.1.0",
    "kaggle>=1.7.4.5",
    "nbconvert>=7.16.6",
    "numpy<2.0.0",
    "python-dotenv>=1.0.0",
    "roboflow>=1.2.11",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2",
    "ultralytics>=8.3.221",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
