[project]
name = "competition-bakdabak-action-datamining"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "ipykernel>=7.1.0",
    "kaggle>=1.7.4.5",
    "nbconvert>=7.16.6",
    "numpy<2.0.0",
    "python-dotenv>=1.0.0",
    "roboflow>=1.2.11",
    # PyTorch with platform-specific versions
    "torch==2.1.2; sys_platform == 'darwin'",
    "torch==2.1.2+cu118; sys_platform == 'linux'",
    "torch==2.1.2+cu118; sys_platform == 'win32'",
    "torchaudio==2.1.2; sys_platform == 'darwin'",
    "torchaudio==2.1.2+cu118; sys_platform == 'linux'",
    "torchaudio==2.1.2+cu118; sys_platform == 'win32'",
    "torchvision==0.16.2; sys_platform == 'darwin'",
    "torchvision==0.16.2+cu118; sys_platform == 'linux'",
    "torchvision==0.16.2+cu118; sys_platform == 'win32'",
    "ultralytics==8.0.196",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
